--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/gestion-entidad
-spring.datasource.username=postgres
-spring.datasource.password=adminadmin
+spring.datasource.url=jdbc:postgresql://ep-cold-shadow-78649087.eu-central-1.aws.neon.tech:5432/postgres
+spring.datasource.username=fl0user
+spring.datasource.password=n4tvxXTy7rZa
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.format-sql=true
